fix: Fix little crash

--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width,initial-scale=1" name="viewport">
+    <meta charset="utf-8" />
+    <meta content="width=device-width,initial-scale=1" name="viewport" />
     <title>Kalsibil | FianDev</title>
-    <link rel="favicon" href="assets/img/icon.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/img/icon.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet" />
+    <link
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
   <body>
     <header id="header" class="d-flex align-items-center">
@@ -47,89 +56,209 @@
       </div>
     </header>
     <section id="hero">
-      <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div
+        id="heroCarousel"
+        data-bs-interval="5000"
+        class="carousel slide carousel-fade"
+        data-bs-ride="carousel"
+      >
         <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
         <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active" style="background-image:url(assets/img/slide/kalk.jpg)">
+          <div
+            class="carousel-item active"
+            style="background-image: url(assets/img/slide/kalk.jpg)"
+          >
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Selamat Datang di <span><i>Kalsibil</i>!</span>
+                <h2 class="animate__animated animate__fadeInDown">
+                  Selamat Datang di <span><i>Kalsibil</i>!</span>
                 </h2>
-                <p class="animate__animated animate__fadeInUp"><i>Kalsibil</i> adalah singkatan dari Kalkulator Konversi Bilangan.</p>
+                <p class="animate__animated animate__fadeInUp">
+                  <i>Kalsibil</i> adalah singkatan dari Kalkulator Konversi
+                  Bilangan.
+                </p>
               </div>
             </div>
           </div>
-          <div class="carousel-item" style="background-image:url(assets/img/slide/bil.jpg)">
+          <div
+            class="carousel-item"
+            style="background-image: url(assets/img/slide/bil.jpg)"
+          >
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Apa fungsi <i>Kalsibil</i>?</h2>
-                <p class="animate__animated animate__fadeInUp"><i>Kalsibil</i> berfungsi untuk mempermudah Anda dalam mengonversi bilangan.</p>
+                <h2 class="animate__animated animate__fadeInDown">
+                  Apa fungsi <i>Kalsibil</i>?
+                </h2>
+                <p class="animate__animated animate__fadeInUp">
+                  <i>Kalsibil</i> berfungsi untuk mempermudah Anda dalam
+                  mengonversi bilangan.
+                </p>
               </div>
             </div>
           </div>
-          <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+          <a
+            class="carousel-control-prev"
+            href="#heroCarousel"
+            role="button"
+            data-bs-slide="prev"
+          >
+            <span
+              class="carousel-control-prev-icon bi bi-chevron-left"
+              aria-hidden="true"
+            ></span>
           </a>
-          <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-            <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+          <a
+            class="carousel-control-next"
+            href="#heroCarousel"
+            role="button"
+            data-bs-slide="next"
+          >
+            <span
+              class="carousel-control-next-icon bi bi-chevron-right"
+              aria-hidden="true"
+            ></span>
           </a>
         </div>
+      </div>
     </section>
     <main id="main">
       <section id="calc" class="contact">
         <div class="container">
           <div class="section-title">
             <h2>Kalkulator Konversi Bilangan</h2>
-            <p id="test">Ketikkan angka yang ingin Anda konversikan di dalam kolom pertama. Hasil konversi akan tampil pada kolom di bawahnya.</p>
+            <p id="test">
+              Ketikkan angka yang ingin Anda konversikan di dalam kolom pertama.
+              Hasil konversi akan tampil pada kolom di bawahnya.
+            </p>
           </div>
           <div class="row">
             <div class="col-lg mt-5 mt-lg-0 d-flex align-items-stretch">
               <div class="php-email-form">
                 <div class="dropdown">
-                  <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Pilih input</button>
+                  <button
+                    class="btn btn-success dropdown-toggle"
+                    type="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Pilih input
+                  </button>
                   <ul class="dropdown-menu dropdown-menu-dark">
                     <li>
-                      <a class="dropdown-item" href="#calc" onclick="pilihan('biner')" id="pilBiner">Biner</a>
+                      <a
+                        class="dropdown-item"
+                        href="#calc"
+                        onclick="pilihan('biner')"
+                        id="pilBiner"
+                        >Biner</a
+                      >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#calc" onclick="pilihan('oktal')" id="pilOktal">Oktal</a>
+                      <a
+                        class="dropdown-item"
+                        href="#calc"
+                        onclick="pilihan('oktal')"
+                        id="pilOktal"
+                        >Oktal</a
+                      >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#calc" onclick="pilihan('desimal')" id="pilDesimal">Desimal</a>
+                      <a
+                        class="dropdown-item"
+                        href="#calc"
+                        onclick="pilihan('desimal')"
+                        id="pilDesimal"
+                        >Desimal</a
+                      >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#calc" onclick="pilihan('heksa')" id="pilHeksadesimal">Heksadesimal</a>
+                      <a
+                        class="dropdown-item"
+                        href="#calc"
+                        onclick="pilihan('heksa')"
+                        id="pilHeksadesimal"
+                        >Heksadesimal</a
+                      >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#calc" onclick="pilihan('ascii')" id="pilASC">ASCII</a>
+                      <a
+                        class="dropdown-item"
+                        href="#calc"
+                        onclick="pilihan('ascii')"
+                        id="pilASC"
+                        >ASCII</a
+                      >
                     </li>
                   </ul>
                 </div>
                 <div class="form-group mt-3">
                   <label for="name" id="lblinput">Biner</label>
-                  <input type="text" class="form-control" onkeyup="convert()" name="input" id="input" required placeholder="0">
+                  <input
+                    type="text"
+                    class="form-control"
+                    onkeyup="convert()"
+                    name="input"
+                    id="input"
+                    required
+                    placeholder="0"
+                  />
                   <p class="text text-danger mt-1" id="warning"></p>
                 </div>
                 <h5 class="mt-4">Output :</h5>
                 <div class="form-group mt-3" id="divbiner">
                   <label for="name" id="lblbiner">Biner</label>
-                  <input type="text" class="form-control" name="outputbiner" id="outputbiner" disabled="disabled" value="0">
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="outputbiner"
+                    id="outputbiner"
+                    disabled="disabled"
+                    value="0"
+                  />
                 </div>
                 <div class="form-group mt-3" id="divoktal">
                   <label for="name" id="lbloktal">Oktal</label>
-                  <input type="text" class="form-control" name="outputoktal" id="outputoktal" disabled="disabled" value="0">
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="outputoktal"
+                    id="outputoktal"
+                    disabled="disabled"
+                    value="0"
+                  />
                 </div>
                 <div class="form-group mt-3" id="divdesimal" id="for-asc">
                   <label for="name" id="lbldesimal">Desimal</label>
-                  <input type="text" class="form-control" name="output2" id="outputdesimal" disabled="disabled" value="0">
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="output2"
+                    id="outputdesimal"
+                    disabled="disabled"
+                    value="0"
+                  />
                 </div>
                 <div class="form-group mt-3" id="divheksa">
                   <label for="name" id="lblheksa">Heksadesimal</label>
-                  <input type="text" class="form-control" name="outputheksa" id="outputheksa" disabled="disabled" value="0">
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="outputheksa"
+                    id="outputheksa"
+                    disabled="disabled"
+                    value="0"
+                  />
                 </div>
                 <div class="form-group mt-3" id="divascii">
                   <label for="name" id="lblascii">ASCII</label>
-                  <input type="text" class="form-control" name="outputascii" id="outputascii" disabled="disabled" value="0">
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="outputascii"
+                    id="outputascii"
+                    disabled="disabled"
+                    value="0"
+                  />
                 </div>
               </div>
             </div>
@@ -155,14 +284,22 @@
             <i class="bx bxl-gmail"></i>
           </a>
         </div>
-        <div class="copyright">&copy; Copyright <strong>
-            <span><i>Kalsibil</i></span>
-          </strong>. All Rights Reserved </div>
-        <div class="credits">Made by <a href="https://instagram.com/d.arfian">Dwi Arfian (FianDev)</a>
+        <div class="copyright">
+          &copy; Copyright
+          <strong>
+            <span><i>Kalsibil</i></span> </strong
+          >. All Rights Reserved
+        </div>
+        <div class="credits">
+          Made by
+          <a href="https://instagram.com/d.arfian">Dwi Arfian (FianDev)</a>
         </div>
       </div>
     </footer>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
+    <a
+      href="#"
+      class="back-to-top d-flex align-items-center justify-content-center"
+    >
       <i class="bi bi-arrow-up-short"></i>
     </a>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
